(1/2) custom boot dexopt dialog
Change-Id: I9298d7e2b85a703921abf62f8b91157e6f88803b
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/cm/res/res/values/config.xml
+++ b/cm/res/res/values/config.xml
@@ -117,4 +117,8 @@
 
     <!-- The CMSystemServer class that is invoked from Android's SystemServer -->
     <string name="config_externalSystemServer" translatable="false">org.cyanogenmod.platform.internal.CMSystemServer</string>
+
+    <!-- Whether to use fancy effects on the boot dexopt screen.
+         Low end devices might want to disable this. -->
+    <bool name="config_bootDexoptIsFancy">true</bool>
 </resources>
