(1/2) custom boot dexopt dialog
  * pass application info, current and total number of packages to the
    boot message interface
  * turn the dialog into a full screen dialog with custom view

  * awesome logo in the middle, overlay able (in case we need to rebrand)
      - cm/res/res/drawable/dexopt_brand_logo.xml
  * display app icon, dexopt message and package name of the processed package
  * show a progressbar on the bottom, showing the current progress

  * possible to disable icon and package name of processing app via config
      - config_bootDexoptIsFancy

  * add the corresponding cm api for the new resources

Change-Id: I9298d7e2b85a703921abf62f8b91157e6f88803b
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/cm/res/res/values/symbols.xml
+++ b/cm/res/res/values/symbols.xml
@@ -124,4 +124,14 @@
 
     <!-- CM system server -->
     <java-symbol type="string" name="config_externalSystemServer" />
+
+    <!-- Boot dexopt dialog -->
+    <java-symbol type="bool" name="config_bootDexoptIsFancy" />
+    <java-symbol type="drawable" name="dexopt_brand_logo" />
+    <java-symbol type="layout" name="dexopt_dialog" />
+    <java-symbol type="id" name="dexopt_icon" />
+    <java-symbol type="id" name="dexopt_icon_placeholder" />
+    <java-symbol type="id" name="dexopt_message" />
+    <java-symbol type="id" name="dexopt_message_detail" />
+    <java-symbol type="id" name="dexopt_progress" />
 </resources>
